fix(footer - ui): align-center

--- a/vertigo_starts_eu/static/vertigo_starts_eu/src/sass/layout/_footer.scss
+++ b/vertigo_starts_eu/static/vertigo_starts_eu/src/sass/layout/_footer.scss
@@ -25,6 +25,7 @@ $module: ".footer";
 
 	display: flex;
 	justify-content: center;
+	align-items: center;
 
 	& > * {
 		margin: 20px;
